fix: include name in index page links

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,8 +44,10 @@
                 {% set ns.row_name = ns.row_name + ", " + row['site-address'] %}
                 {% endif %}
               {% set ns.row_name = ns.row_name + " (" + row['slug']|clean_slug + ")" %}
+            {% elif row['name'] %}
+              {% set ns.row_name = row['slug']|clean_slug + " - " + row['name'] %}
             {% else %}
-            {% set ns.row_name = row['slug']|clean_slug %}
+              {% set ns.row_name = row['slug']|clean_slug %}
             {% endif %}
             <li><a href="{{ urlRoot }}{{ row['slug'] }}">{{ ns.row_name }}</a></li>
             {% endfor %}
