--- a/templates/generic_index.html
+++ b/templates/generic_index.html
@@ -36,7 +36,7 @@
         {% endif %} #}
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-one-third">
-        <h4 class="govuk-heading-s govuk-!-font-weight-regular"><a class="govuk-link" href="{{ item['href'] }}">{{ item['reference'] }}</a></h4>
+        <h4 class="govuk-heading-s govuk-!-font-weight-regular dl-break-word govuk-body govuk-!-margin-bottom-0"><a class="govuk-link" href="{{ item['href'] }}">{{ item['reference'] }}</a></h4>
       </div>
       <div class="govuk-grid-column-two-thirds">
         <p class="govuk-body govuk-!-margin-top-0 govuk-!-margin-bottom-1">{{ item['text'] }}</p>
